--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# JetBrains files
+.idea
+
+# Secrets
+.secrets.json
